<resources>
    <string name="app_name">Weight Loss Tracker</string>
    <string name="next_button_text">Next</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="choose_gender_title">Choose gender:</string>
    <string name="height">Height(cm)</string>
    <string name="mandatory_field">Mandatory field</string>
    <string name="age">Age</string>
    <string name="goal_details_current_weight">Current weight(kg)</string>
    <string name="goal_details_waist_size">Waist size(cm)</string>
    <string name="weight_data_title">Tell us your basic info:</string>
    <string name="submit_button_text">Submit</string>
    <string name="target_weight">Target weight(kg)</string>
    <string name="ideal_weight_text">Hey %1s, your ideal weight is around \n%2s</string>
    <string name="mandatory_fields_error_message">Please fill in mandatory fields!</string>
    <string name="goal_name">Journey to %1skg</string>
    <string name="start_button_text">Start</string>
    <string name="welcome_setup_message">Please click on start button, and setup your weight loss goal.</string>
    <string name="start_weight_card">Where you began:</string>
    <string name="current_weight">Current data:</string>
    <string name="bmi_chart_label">Bmi index chart</string>
    <string name="goal_details_description">Description</string>
    <string name="set_date">Set date</string>
    <string name="chart_title">Progress chart</string>
    <string name="progress_title">Progress data</string>
    <string name="worst_record_label">Worst record</string>
    <string name="bmi_category_label">Bmi category</string>
    <string name="total_entries_label">Total entries</string>
    <string name="best_record_label">Best record</string>
    <string name="details_tab">Details</string>
    <string name="add_tab">Add</string>
    <string name="add_tab_title">Add Entry</string>
    <string name="stats_tab">Stats</string>
    <string name="history_tab">History</string>
    <string name="kg" translatable="false">%1s kg</string>
    <string name="kg_plus" translatable="false">+%1s kg</string>
    <string name="cm" translatable="false">%1s cm</string>
    <string name="cm_plus" translatable="false">+%1s cm</string>
    <string name="cm_decimal" translatable="false">%1d cm</string>
    <string name="kCal" translatable="false">%1s kCal</string>
    <string name="kCal_plus" translatable="false">+%1s kCal</string>
    <string name="plus" translatable="false">+%1s</string>
    <string name="kg_float" translatable="false">%1fkg</string>
    <string name="entry_success">Entry successfully submitted</string>
    <string name="bmi">Your bmi index: \n %1s</string>
    <string name="bmi_type_underweight">Underweight</string>
    <string name="bmi_type_normal">Normal</string>
    <string name="bmi_type_overweight">Overweight</string>
    <string name="bmi_type_obese">Obese</string>
    <string name="bmi_label">your bmi</string>
    <string name="bmi_details_card">bmi: %1s</string>
    <string name="start_weight_chart">Start weight</string>
    <string name="target_weight_chart">Target weight</string>
    <string name="bmi_underweight">Underweight</string>
    <string name="bmi_normal">Normal weight</string>
    <string name="bmi_overweight">Overweight</string>
    <string name="bmi_obese_first">Obese Class I (Moderately obese)</string>
    <string name="bmi_obese_second">Obese Class II (Severely obese)</string>
    <string name="bmi_obese_third">Obese Class III (Very severely obese)</string>
    <string name="set_start_date">Set start date</string>
    <string name="optional_field">Optional</string>
    <string name="current_weight_stats">Current weight:</string>
    <string name="target_weight_stats">Target weight:</string>
    <string name="total_loss_stats">Total loss:</string>
    <string name="remaining_stats">Remaining:</string>
    <string name="cheeseburgers_burned_stats">Cheeseburgers burned:</string>
    <string name="current_waist_size_stats">Current waist size:</string>
    <string name="total_waist_size_loss_stats">Total waist size loss:</string>
    <string name="total_calories_burned_stats">Total calories burned:</string>
    <string name="start_date_description">Note: Start date cannot be changed later on, and new weight entries cannot be before the initial start date.</string>
    <string name="splash_screen_text">Designed by Marko Benke</string>
    <string name="weight_loss_tracker_title" translatable="false">WEIGHT LOSS TRACKER</string>
    <string name="target_weight_description">Note: Set your target weight. The weight goal you want to achieve.</string>
    <string name="weigh_ins">Weigh-ins</string>
    <string name="waist_sizes">Waist sizes</string>
    <string name="unknown_error_title">An unknown error occurred!</string>
    <string name="unknown_error_message">Please check your internet connection…</string>
    <string name="goal_accomplished">Goal accomplished!</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="version">Version: %1s</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="user_update_success">Update successful</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_entry_dialog_title">Delete weight entry</string>
    <string name="delete_entry_dialog_description">Are you sure you want to delete this entry?</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="login_title">Welcome to Free Weight Loss Tracker App</string>
    <string name="login_description">To proceed, please sign in…</string>
    <string name="okay">Okay</string>
    <string name="username">Username</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet_connection_error">Check your internet connection</string>
    <string name="add_entry_title">Hey %1s, time for new entry?</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="entry_details">Entry Details</string>
    <string name="update">Update</string>
    <string name="statistics">Statistics</string>
    <string name="current_starting_weight">Current/Starting weight(kg)</string>
</resources>