<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:icon="@drawable/ic_details_menu"
        android:title="@string/details_tab" />
    <item
        android:id="@+id/addEntry"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:icon="@drawable/ic_scale"
        android:title="@string/add_tab" />
    <item
        android:id="@+id/stats"
        app:showAsAction="always"
        android:orderInCategory="3"
        android:icon="@drawable/ic_stats_menu"
        android:title="@string/stats_tab" />
    <item
        android:id="@+id/entryHistory"
        app:showAsAction="always"
        android:orderInCategory="4"
        android:icon="@drawable/ic_history_menu"
        android:title="@string/history_tab" />
</menu>