<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.marko.weightlosstracker.ui.main.home.HomeFragment"
        android:label="@string/details_tab">
        <action
            android:id="@+id/action_homeFragment_to_addEntryFragment"
            app:destination="@id/addEntry"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/addEntry"
        android:name="com.marko.weightlosstracker.ui.main.add.AddEntryFragment"
        android:label="@string/add_tab_title">
        <action
            android:id="@+id/action_addEntryFragment_to_statsFragment"
            app:destination="@id/stats"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/entryHistory"
        android:name="com.marko.weightlosstracker.ui.main.history.EntryHistoryFragment"
        android:label="@string/history_tab">
        <action
            android:id="@+id/action_entryHistory_to_entryDetailsFragment"
            app:destination="@id/entryDetailsFragment"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/stats"
        android:name="com.marko.weightlosstracker.ui.main.stats.StatsFragment"
        android:label="@string/statistics">
        <action
            android:id="@+id/action_statsFragment_to_entryHistoryFragment"
            app:destination="@id/entryHistory"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/entryDetailsFragment"
        android:name="com.marko.weightlosstracker.ui.main.details.EntryDetailsFragment"
        android:label="@string/entry_details">
        <argument
            android:name="WeightEntry"
            app:argType="com.marko.weightlosstracker.model.WeightEntry" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.marko.weightlosstracker.ui.main.settings.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.marko.weightlosstracker.ui.main.profile.ProfileFragment"
        android:label="@string/profile" />
</navigation>