<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <View
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_weight="2"
            android:background="@color/on_board_progress_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress"
        android:orientation="vertical"
        android:padding="@dimen/large_padding">

        <TextView
            android:id="@+id/weightDataText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/weight_data_title"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/height"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            app:errorEnabled="true"
            app:helperText="@string/mandatory_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/heightEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:maxLength="@integer/height_entry_max_length" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/age"
            app:errorEnabled="true"
            app:helperText="@string/mandatory_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="@integer/age_entry_max_length" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/currentWeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/goal_details_current_weight"
            app:errorEnabled="true"
            app:helperText="@string/mandatory_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/currentWeightEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:maxLength="@integer/weight_entry_max_length" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/waistSize"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/goal_details_waist_size"
            app:errorEnabled="true"
            app:helperText="@string/optional_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/waistSizeEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLength="@integer/waist_size_max_length" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/dateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/setDate"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_start_date"
                android:textColor="@color/primaryTextColor" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/setDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textSize="14sp"
                tools:ignore="RelativeOverlap"
                tools:text="30.01.1991" />
        </RelativeLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/basic_dialog_button_height"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:layout_marginBottom="24dp"
        android:text="@string/next_button_text"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/purple_500"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        tools:ignore="UnusedAttribute" />
</RelativeLayout>