<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen_image"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/huge_margin"
        android:fontFamily="@font/mouse_memoirs"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:padding="@dimen/large_padding"
        android:shadowColor="@android:color/black"
        android:shadowRadius="4"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appTitle"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:padding="@dimen/large_padding"
        android:shadowColor="@android:color/black"
        android:shadowRadius="4"
        android:text="@string/login_description"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:layout_marginVertical="@dimen/large_margin"
        android:drawableLeft="@drawable/ic_google"
        android:text="@string/google_sign_in" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:layout_centerInParent="true"
        android:background="@drawable/progress_bar_circle"
        android:elevation="16dp"
        android:indeterminate="true"
        android:padding="@dimen/small_padding"
        android:visibility="gone" />
</RelativeLayout>